[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-activity-cli"
version = "0.1.0"
description = "A command-line tool to fetch and display recent public activity for a GitHub user."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Lucas", email = "ldcalicchio@gmail.com" }
]
dependencies = [
    "requests",
]
[project.scripts]
github-activity = "github_activity.cli:main"